--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,7 @@
     <string name="help_and_feetback"><![CDATA[Help & feedback]]></string>
     <string name="guide">Guide to APP</string>
     <string name="settings">Settings</string>
+    <string name="mail">Mail</string>
+    <string name="dial">Dial</string>
+    <string name="map">Map</string>
 </resources>
